<resources>
    <string name="app_name">UniFlow</string>
    <string name="point_at_lecture_notes_and_tap_capture">Point at lecture notes and tap Capture</string>
    <string name="capture_notes">📸 Capture Notes</string>
    <string name="exam_date_e_g_may_15_2026">Exam Date (e.g. May 15, 2026)</string>
    <string name="toggle_torch">Toggle torch</string>
    <string name="subject_name_e_g_physics_math">Subject Name (e.g. Physics, Math)</string>
    <string name="point_camera_at_your_past_exam_paper_and_tap_scan">Point camera at your past exam paper and tap Scan</string>
    <string name="scan_exam_paper">Scan Exam Paper</string>
    <string name="examoracle_predictions">🔮 ExamOracle Predictions</string>
    <string name="home">Home</string>
    <string name="lecture">Lecture</string>
    <string name="timetable">Timetable</string>
    <string name="exam">Exam</string>
    <string name="deadline">Deadline</string>
    <string name="burnout">Burnout</string>
    <string name="concept">Concept</string>
    <string name="conceptsnap">ConceptSnap</string>
    <string name="photo_a_diagram_or_formula_gemini_explains_it_instantly">Photo a diagram or formula — Gemini explains it instantly.</string>
    <string name="start_camera">Start Camera</string>
    <string name="tap_above_to_start_camera_and_capture_a_concept">Tap above to start camera and capture a concept.</string>
    <string name="optional_ask_a_specific_question_about_this_concept">Optional: Ask a specific question about this concept</string>
    <string name="explain_this_concept">Explain This Concept</string>
    <string name="se">🔍</string>
    <string name="your_academic_potential_unlocked">Your Academic Potential Unlocked</string>
    <string name="student">Student</string>
    <string name="gradepredictor">GradePredictor</string>
    <string name="goal">Goal</string>
    <string name="current_50k">Current 50K</string>
    <string name="_4_0">4.0</string>
    <string name="scan_notes">Scan Notes</string>
    <string name="analyze_handwritten_notes_and_extract_key_information">Analyze handwritten notes and extract key information</string>
    <string name="voicereminder">VoiceReminder</string>
    <string name="speak_a_reminder_ai_sets_it_for_you">Speak a reminder, AI sets it for you</string>
    <string name="tap_the_mic_and_speak_a_reminder_nexample_remind_me_to_submit_assignment_tomorrow_at_3_pm">Tap the mic and speak a reminder.\nExample: Remind me to submit assignment tomorrow at 3 PM</string>
    <string name="tap_to_speak">Tap to speak</string>
    <string name="your_reminders">Your Reminders</string>
</resources>