<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item android:id="@+id/nav_lecture"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/lecture" />
    <item android:id="@+id/nav_timetable"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/timetable" />
    <item android:id="@+id/nav_exam"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/exam" />
    <item android:id="@+id/nav_deadline"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/deadline" />

</menu>